k8s/authorization-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authorization-server-ns
  labels:
    name: authorization-server-ns
