k8s/authorization-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-server
  namespace: authorization-server-ns
  labels:
    app: authorization-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9000
      name: http
  selector:
    app: authorization-server
